Feature/individuell haandtering av dokumenter i histark + lagt til kodeverk TemaHistark (#3753)